--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.reversi.board"
+        android:name="com.example.reversi.Board"
         android:id="@+id/fragment"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
