--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,14 @@
     tools:context=".MainActivity">
 
 
+
+
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/myNavHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.reversi.Board"
-        android:id="@+id/fragment"/>
-
+        app:navGraph = "@navigation/navigation"
+        app:defaultNavHost = "true"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
