--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Board"
+    tools:context=".gameFragment"
     android:id="@+id/constraintLayout">
+
     <TextView
         android:id="@+id/currentPlayer"
         android:layout_width="wrap_content"
