--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,5 +18,9 @@
         android:id="@+id/gameFragment"
         android:name="com.example.reversi.gameFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" />
+        tools:layout="@layout/fragment_game" >
+        <action
+            android:id="@+id/action_gameFragment_to_menu"
+            app:destination="@id/menu" />
+    </fragment>
 </navigation>
